[package]
name = "librocksdb_sys"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
build = "build.rs"
links = "rocksdb"

[dependencies]
libc = "0.2.11"
tempdir = "0.3"
libz-sys = ">= 0"
snappy-sys = ">= 0"

[features]
default = []
static-link = []
# portable doesn't require static link, though it's meaningless
# when not using with static-link right now in this crate.
portable = []
sse = []

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[dependencies.bzip2-sys]
git = "https://github.com/busyjay/bzip2-rs.git"
branch = "test-build"
features = ["with-stdio"]

[dependencies.lz4-sys]
git = "https://github.com/busyjay/lz4-rs.git"
branch = "adjust-build"

[dependencies.zstd-sys]
git = "https://github.com/busyjay/zstd-rs.git"
branch = "adjust-build"
